--- a/App.config
+++ b/App.config
@@ -11,7 +11,7 @@
         <value></value>
       </setting>
       <setting name="DefaultPalette" serializeAs="String">
-        <value></value>
+        <value>Custom/TELUS</value>
       </setting>
       <setting name="TouchUI" serializeAs="String">
         <value></value>
@@ -23,7 +23,7 @@
         <value></value>
       </setting>
       <setting name="DirectX" serializeAs="String">
-        <value></value>
+        <value>True</value>
       </setting>
       <setting name="RegisterUserSkins" serializeAs="String">
         <value></value>
@@ -35,13 +35,42 @@
         <value></value>
       </setting>
       <setting name="DefaultAppFont" serializeAs="String">
-        <value>HelveticaNowDisplay Regular;9.749999</value>
+        <value>HelveticaNowDisplay Regular;8.999999</value>
       </setting>
       <setting name="DPIAwarenessMode" serializeAs="String">
         <value></value>
       </setting>
       <setting name="CustomPaletteCollection" serializeAs="Xml">
-        <value />
+        <value>
+          <CustomPaletteCollection>
+            <Skin Name="Basic">
+              <SvgPalette Name="TELUS">
+                <SvgColor Name="Paint" Value="255,255,255" />
+                <SvgColor Name="Paint High" Value="255,255,255" />
+                <SvgColor Name="Paint Shadow" Value="227,246,209" />
+                <SvgColor Name="Paint Deep Shadow" Value="230,230,230" />
+                <SvgColor Name="Brush" Value="75,40,109" />
+                <SvgColor Name="Brush High" Value="55,30,79" />
+                <SvgColor Name="Brush Light" Value="97,56,137" />
+                <SvgColor Name="Brush Major" Value="43,128,0" />
+                <SvgColor Name="Brush Minor" Value="225,225,225" />
+                <SvgColor Name="Accent Paint" Value="75,40,109" />
+                <SvgColor Name="Accent Paint Dark" Value="55,30,79" />
+                <SvgColor Name="Accent Paint Light" Value="43,128,0" />
+                <SvgColor Name="Accent Paint Lighter" Value="242,239,244" />
+                <SvgColor Name="Accent Brush" Value="255,255,255" />
+                <SvgColor Name="Accent Brush Light" Value="216,203,229" />
+                <SvgColor Name="Red" Value="193,35,53" />
+                <SvgColor Name="Green" Value="102,204,0" />
+                <SvgColor Name="Blue" Value="34,172,164" />
+                <SvgColor Name="Yellow" Value="250,202,105" />
+                <SvgColor Name="Black" Value="44,46,48" />
+                <SvgColor Name="Gray" Value="178,185,191" />
+                <SvgColor Name="White" Value="250,250,250" />
+              </SvgPalette>
+            </Skin>
+          </CustomPaletteCollection>
+        </value>
       </setting>
     </DevExpress.LookAndFeel.Design.AppSettings>
   </applicationSettings>
