--- a/App.config
+++ b/App.config
@@ -77,7 +77,7 @@
   <connectionStrings>
     <add name="RequestsManager.My.MySettings.Local_Prod_SupportConnectionString" connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=&quot;\\l4pncdot01svm02\WebsInc\Access DB - Prod Support\ProdSupport.db&quot;" />
     <add name="DefaultConnection" connectionString="Data Source = |SQL/CE|" />
-    <add name="RequestsManager.My.MySettings.DB_Connection" connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=&quot;D:\Work\TELUS\DB\20230419. 43358.Prod_Support_Issue_Tracking_be.accdb&quot;" providerName="System.Data.OleDb" />
+    <add name="RequestsManager.My.MySettings.DB_Connection" connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=&quot;I:\Shared drives\Flexit360 Apps (Alain)\Access DBs\Backups\Tests_Dev\20230412.180525.Prod_Support_Issue_Tracking_be.accdb&quot;" providerName="System.Data.OleDb" />
   </connectionStrings>
   <startup></startup>
   <appSettings>
