--- a/FlexitRequestsManager.vbproj
+++ b/FlexitRequestsManager.vbproj
@@ -31,7 +31,7 @@
     <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
-    <PlatformTarget>x86</PlatformTarget>
+    <PlatformTarget>x64</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <DefineDebug>true</DefineDebug>
@@ -39,6 +39,7 @@
     <OutputPath>bin\Debug\</OutputPath>
     <DocumentationFile>Flexit360_Requests_Manager.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <PlatformTarget>x86</PlatformTarget>
@@ -68,6 +69,26 @@
   <PropertyGroup>
     <ApplicationIcon>Web Error.ico</ApplicationIcon>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
+    <DebugSymbols>true</DebugSymbols>
+    <DefineDebug>true</DefineDebug>
+    <DefineTrace>true</DefineTrace>
+    <OutputPath>bin\x64\Debug\</OutputPath>
+    <DocumentationFile>Flexit360_Requests_Manager.xml</DocumentationFile>
+    <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
+    <DebugType>full</DebugType>
+    <PlatformTarget>x64</PlatformTarget>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
+    <DefineTrace>true</DefineTrace>
+    <OutputPath>bin\x64\Release\</OutputPath>
+    <DocumentationFile>Flexit360_Requests_Manager.xml</DocumentationFile>
+    <Optimize>true</Optimize>
+    <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
+    <DebugType>pdbonly</DebugType>
+    <PlatformTarget>x64</PlatformTarget>
+    <Prefer32Bit>true</Prefer32Bit>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="CustomControls">
       <HintPath>C:\Users\hellf\Downloads\Custom-TextBox-2--Rounded-Placeholder-main\RJControls-main\CustomControls\bin\Debug\CustomControls.dll</HintPath>
@@ -81,6 +102,7 @@
     <Reference Include="DevExpress.Images.v21.2, Version=21.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.Printing.v21.2.Core, Version=21.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.RichEdit.v21.2.Core, Version=21.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.Sparkline.v21.2.Core, Version=21.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.Utils.v21.2, Version=21.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.Utils.v21.2.UI, Version=21.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.Xpo.v21.2, Version=21.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
@@ -110,6 +132,7 @@
       <HintPath>C:\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.7.2\System.dll</HintPath>
     </Reference>
     <Reference Include="System.ComponentModel.Composition" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
@@ -267,11 +290,18 @@
     <Compile Include="WaitForm1.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="HoursEdit.Designer.vb">
+      <DependentUpon>HoursEdit.vb</DependentUpon>
+    </Compile>
+    <Compile Include="HoursEdit.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <EmbeddedResource Include="Forms\FLEXS_Mgmt.en-CA.resx">
       <DependentUpon>FLEXS_Mgmt.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FLEXS_Mgmt.resx">
       <DependentUpon>FLEXS_Mgmt.vb</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FlyoutLogHours.resx">
       <DependentUpon>FlyoutLogHours.vb</DependentUpon>
@@ -288,8 +318,13 @@
     <EmbeddedResource Include="Forms\JIRASearch.resx">
       <DependentUpon>JIRASearch.vb</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="HoursEdit.resx">
+      <DependentUpon>HoursEdit.vb</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="MenuV2.resx">
       <DependentUpon>MenuV2.vb</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="My Project\licenses.licx" />
     <EmbeddedResource Include="Forms\RadForm1.resx">
@@ -379,6 +414,7 @@
     <None Include="Resources\LogoJIRA.svg" />
     <None Include="Resources\JIRA32.svg" />
     <None Include="Resources\THH_Logo_English.svg" />
+    <None Include="Resources\TimeBulkEdit.svg" />
     <Content Include="Themes\Office2019LightPurple_DockSplitContainer.xml" />
     <Content Include="Themes\Office2019LightPurple_RadCheckmark.xml" />
     <Content Include="Themes\Office2019LightPurple_RadPageView_Telerik_WinControls_RootRadElement.xml" />
